--- a/BoyumFoosballStats-2.0/_Imports.razor
+++ b/BoyumFoosballStats-2.0/_Imports.razor
@@ -11,3 +11,4 @@
 @using BoyumFoosballStats_2._0.Pages.Shared
 @using BoyumFoosballStats_2._0.Pages
 @using BoyumFoosballStats
+@using BoyumFoosballStats_2._0.Shared.FirestoreModels
