Changed to Blazor Server to work properly with FireStore.

--- a/BoyumFoosballStats-2.0/Pages/Index.razor
+++ b/BoyumFoosballStats-2.0/Pages/Index.razor
@@ -1,12 +1,11 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
-
-<MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
-<MudText Class="mb-8">Welcome to your new app, powered by MudBlazor!</MudText>
-<MudAlert Severity="Severity.Normal">
-    You can find documentation and examples on our website here:
-    <MudLink Href="https://mudblazor.com" Typo="Typo.body2" Color="Color.Inherit">
-        <b>www.mudblazor.com</b>
-    </MudLink>
-</MudAlert>
+<MudGrid Class="mt-4">
+    <MudItem xs="12" sm="12" md="12">
+        <MudText Typo="Typo.h3">Hello, world!</MudText>
+        <MudText Typo="Typo.subtitle1">Welcome to your new app.</MudText>
+    </MudItem>
+    <MudItem xs="12" sm="12" md="12">
+        <SurveyPrompt Title="How is Blazor working for you?"/>
+    </MudItem>
+</MudGrid>
