--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,7 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MudBlazor
-@using BoyumFoosballStats_2
-@using BoyumFoosballStats_2.Shared
-@using BoyumFoosballStats_2._0.Pages.ScoreCollection
-@using BoyumFoosballStats_2._0.Shared.FirestoreModels
+@using BoyumFoosballStats_2._0
+@using BoyumFoosballStats_2._0.Shared
