--- a/BoyumFoosballStats-2.0/Pages/_Host.cshtml
+++ b/BoyumFoosballStats-2.0/Pages/_Host.cshtml
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
     <link href="css/site.css" rel="stylesheet"/>
-    <link href="BoyumFoosballStats_2.styles.css" rel="stylesheet"/>
+    @* <link href="BoyumFoosballStats_2.styles.css" rel="stylesheet"/> *@
 </head>
 <body>
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
