--- a/BoyumFoosballStats-2.0/Shared/NavMenu.razor
+++ b/BoyumFoosballStats-2.0/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Filled.Dashboard" IconColor="Color.Inherit">
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard" IconColor="Color.Inherit">
         Home
     </MudNavLink>
     <MudNavLink Href="ScoreCollection" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Score Collection</MudNavLink>
