--- a/BoyumFoosballStats-2.0/Components/TeamCard/TeamCard.razor
+++ b/BoyumFoosballStats-2.0/Components/TeamCard/TeamCard.razor
@@ -1,13 +1,13 @@
 ﻿@using BoyumFoosballStats_2._0.Shared.DbModels
-<MudPaper Elevation="4" MinHeight="200px" Class="@WrapperClasses">
+<MudPaper Elevation="4" MinHeight="200px" Class="@ViewModel.WrapperClasses">
     <div class="d-flex gap-8">
-        <MudSelect T="Player" Value="@Defender" ValueChanged="HandleDefenderChanged" Label="@ViewModel.GetDefenderName()" Class="w-0" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Security">
+        <MudSelect T="Player" Value="@TeamInfo!.Defender" ValueChanged="ViewModel.HandleDefenderChanged" Label="@ViewModel.GetDefenderName()" Class="w-0" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Security">
             @foreach (var player in PlayersList!)
             {
                 <MudSelectItem T="Player" Value="@player">@player.Name</MudSelectItem>
             }
         </MudSelect>
-        <MudSelect T="Player" Value="@Attacker" ValueChanged="HandleAttackerChanged" Label="@ViewModel.GetAttackerName()" Class="w-0" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Bolt">
+        <MudSelect T="Player" Value="@TeamInfo!.Attacker" ValueChanged="ViewModel.HandleAttackerChanged" Label="@ViewModel.GetAttackerName()" Class="w-0" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Bolt">
             @foreach (var player in PlayersList!)
             {
                 <MudSelectItem T="Player" Value="@player">@player.Name</MudSelectItem>
@@ -16,7 +16,7 @@
     </div>
     <div class="d-flex justify-center align-center gap-4">
         <MudIconButton Icon="@Icons.Material.Filled.Remove" OnClick="() => ViewModel.DecrementScore()" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Large"/>
-        <MudText Typo="Typo.h2">@ViewModel.Score</MudText>
+        <MudText Typo="Typo.h2">@TeamInfo.Score</MudText>
         <MudIconButton Icon="@Icons.Material.Filled.Add" OnClick="() => ViewModel.IncrementScore()" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Large"/>
     </div>
 </MudPaper>
