--- a/BoyumFoosballStats-2.0/_Imports.razor
+++ b/BoyumFoosballStats-2.0/_Imports.razor
@@ -10,3 +10,5 @@
 @using BoyumFoosballStats_2
 @using BoyumFoosballStats_2.Shared
 @using BoyumFoosballStats_2._0.Pages.ScoreCollection
+@using BoyumFoosballStats_2.Components.TeamCard
+@using BoyumFoosballStats_2._0.Shared.DbModels
