--- a/BoyumFoosballStats-2.0/Shared/NavMenu.razor
+++ b/BoyumFoosballStats-2.0/Shared/NavMenu.razor
@@ -3,4 +3,5 @@
         Home
     </MudNavLink>
     <MudNavLink Href="ScoreCollection" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Score Collection</MudNavLink>
+    <MudNavLink Href="MatchHistory" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.History">Match History</MudNavLink>
 </MudNavMenu>
